src-ken&y/objects/Payment_Term__c.object
<CustomObject>
    <customHelpPage>HelpPaymentTerms</customHelpPage>
    <description>Payment Terms</description>
    <fields>
        <fullName>Always_Take_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Always takes discount even if the payment is done after the eligible discount days.</description>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Day__c</fullName>
        <inlineHelpText>Enter number from 1-31 for cutoff day. If day from invoice date is greater than cutoff day of month, the due date will move to following month; enter 31 for last day of month</inlineHelpText>
        <label>Cut Off Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_Of_Month__c</fullName>
        <inlineHelpText>Enter number from 1-31 for day that invoice is due; enter 31 for last day of month</inlineHelpText>
        <label>Day of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the payment terms</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Days__c</fullName>
        <description>Number of days discount applies</description>
        <inlineHelpText>The number of days after the invoice date within which the invoice must be paid to receive the discount.</inlineHelpText>
        <label>Discount Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>The discount that can be taken if invoice is paid within the discount days</description>
        <inlineHelpText>The discount given if the invoice is paid within the specified discount days.</inlineHelpText>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <description>Number of days from delivery of goods or services until the payment is due</description>
        <inlineHelpText>Number of days from delivery of goods or services until the payment is due.</inlineHelpText>
        <label>Due Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Months_Ahead__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter number 0-12 of months ahead of due day of month that invoice should be due</inlineHelpText>
        <label>Months Ahead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>Payment Terms</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Days</fullName>
                    <default>true</default>
                    <label>Due Days</label>
                </value>
                <value>
                    <fullName>Due Day Of Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Terms</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Due_Days__c</columns>
        <columns>Discount_Percent__c</columns>
        <columns>Discount_Days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cut_off_day_must_be_between_1_and_31</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Cut_Off_Day__c &lt; 1, Cut_Off_Day__c &gt; 31)</errorConditionFormula>
        <errorDisplayField>Cut_Off_Day__c</errorDisplayField>
        <errorMessage>Cut off day must be between 1 and 31</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Day_of_Month_must_be_between_1_and_31</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Day_Of_Month__c &lt; 1, Day_Of_Month__c &gt; 31)</errorConditionFormula>
        <errorDisplayField>Day_Of_Month__c</errorDisplayField>
        <errorMessage>Day of month must be between 1 and 31</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_due_days_for_payment_term</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Type__c , &quot;Due Days&quot;) , ISBLANK(  Due_Days__c  ), false )</errorConditionFormula>
        <errorMessage>Please enter due days for the selected payment term type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_due_days_of_month_for_payment_term</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Type__c , &quot;Due Day Of Month&quot;) ,  OR(ISBLANK(  Day_Of_Month__c  ),ISBLANK(  Cut_Off_Day__c  ),ISBLANK(  Months_Ahead__c  ) ),  false )</errorConditionFormula>
        <errorMessage>Please enter due day of month, cut off day and months ahead for the selected payment term type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Months_ahead_must_be_between_0_and_12</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Months_Ahead__c &lt; 0, Months_Ahead__c &gt; 12)</errorConditionFormula>
        <errorDisplayField>Months_Ahead__c</errorDisplayField>
        <errorMessage>Months ahead must be between 0 and 12</errorMessage>
    </validationRules>
</CustomObject>